--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -27,17 +29,43 @@
         </div>
         <div class="col-lg-9">
           <div class="row">
-            <div class="col-lg-12" id=currentWeather></div>
-
+            <div class="row">
+              <div class="col-lg-12" id=currentWeather>
+              </div>
             </div>
+
+            <div class="col-lg-2" id=forecastInput>
+
+                </div>
+            <!-- <div class="col-lg-2" id=forecastInput>
+              <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
+                <div class="card-body text-white">
+                  <h5 class="card-title">"MM-DD-YYYY"</h5>
+                  <p>Temp: </p>
+                  <p>Rain: </p>
+                  <p>Humidity: </p>
+                </div>
+              </div>
+            </div>
+          </div>
+         
+        </div>
+      </div>
+    </div> -->
+
+    <!-- <div class="row">
+    <div class="col-lg-2" id=forecastInput>
+      <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
+        <div class="card-body text-white">
+          <h5 class="card-title">"MM-DD-YYYY"</h5>
+          <p>Temp: </p>
+          <p>Rain: </p>
+          <p>Humidity: </p>
         </div>
       </div>
     </div>
+  </div> -->
 
-    <div class="row">
-      <div class="col-lg-3"></div>
-      <div class="col-lg-9" id=forecastInput></div>
-    </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
