--- a/index.html
+++ b/index.html
@@ -1,76 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Document</title>
 
 
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="./Assets/css/style.css">
-    <script src="https://kit.fontawesome.com/e3c037fab4.js" crossorigin="anonymous"></script>
-  </head>
-  <body>
-    <header>
-      <h1>Weather Dashboard</h1>
-    </header>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous" />
+  <link rel="stylesheet" href="./Assets/css/style.css">
+  <script src="https://kit.fontawesome.com/e3c037fab4.js" crossorigin="anonymous"></script>
+</head>
 
-    <div class="container-fluid">
-      <!-- Row 1 -->
-      <div class="row">
-        <div class="col-lg-3" id=searchHistory>
-          <h3>Search for a City:</h3>
-          <input name="City" id="cityInput"><span><button id="button">Search</button></span></input>
-        </div>
-        <div class="col-lg-9">
-          <div class="row">
-            <div class="row">
-              <div class="col-lg-12" id=currentWeather>
-              </div>
-            </div>
+<body>
+  <header>
+    <h1>Weather Dashboard</h1>
+  </header>
 
-            <div class="col-lg-2" id=forecastInput>
-
-                </div>
-            <!-- <div class="col-lg-2" id=forecastInput>
-              <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
-                <div class="card-body text-white">
-                  <h5 class="card-title">"MM-DD-YYYY"</h5>
-                  <p>Temp: </p>
-                  <p>Rain: </p>
-                  <p>Humidity: </p>
-                </div>
-              </div>
-            </div>
-          </div>
-         
-        </div>
+  <div class="container-fluid">
+    <!-- Row 1 -->
+    <div class="row border">
+      <div class="col-lg-3 border" id=searchHistory>
+        <h3>Search for a City:</h3>
+        <input name="City" id="cityInput"><span><button id="button">Search</button></span></input>
       </div>
-    </div> -->
-
-    <!-- <div class="row">
-    <div class="col-lg-2" id=forecastInput>
-      <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
-        <div class="card-body text-white">
-          <h5 class="card-title">"MM-DD-YYYY"</h5>
-          <p>Temp: </p>
-          <p>Rain: </p>
-          <p>Humidity: </p>
+      <div class="col-lg-9 border" >
+        <div class="container" id=currentWeather>
+        </div>
+        <div class="row" id=forecastInput>
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
 
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   <script src="./Assets/js/script.js"></script>
-  </body>
+</body>
+
 </html>
 
 <!-- 
@@ -94,33 +63,33 @@
               <p>Wind Speed: </p> -->
 
 
-              <!-- <p>UV Index: <span class="btn btn-danger"></span></p> -->
+<!-- <p>UV Index: <span class="btn btn-danger"></span></p> -->
 
-              <!-- <div class="list-group">
+<!-- <div class="list-group">
                 <button type="button" class="list-group-item list-group-item-action">Austin</button>
               </div> -->
 
 
-                          <!-- <div class="input-group mb-3">
+<!-- <div class="input-group mb-3">
                 <input type="text" class="form-control" aria-describedby="button-addon2">
                 <div class="input-group-append">
                   <button class="btn btn-outline-secondary" type="button" id="button-addon2">Search</button>
                 </div>
             </div> -->
 
-       <!-- <div class="list-group">
+<!-- <div class="list-group">
         <button type="button" class="list-group-item list-group-item-action">Austin</button>
       </div> -->
-    <!-- </div> -->
+<!-- </div> -->
 
 
-    <!-- 
+<!-- 
           <div class="row" id="5dayForecast">
 
           </div>      -->
 
 
-    <!-- <main>
+<!-- <main>
       <div class="container-fluid">
         <div class="row">
           <div class="col-lg-3">
@@ -136,3 +105,32 @@
           </div>
       </div>
     </main> -->
+
+<!-- <div class="col-lg-2" id=forecastInput>
+              <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
+                <div class="card-body text-white">
+                  <h5 class="card-title">"MM-DD-YYYY"</h5>
+                  <p>Temp: </p>
+                  <p>Rain: </p>
+                  <p>Humidity: </p>
+                </div>
+              </div>
+            </div>
+          </div>
+         
+        </div>
+      </div>
+    </div> -->
+
+<!-- <div class="row">
+    <div class="col-lg-2" id=forecastInput>
+      <div class="card text-white bg-primary mb-3" style="max-width: 10rem;">
+        <div class="card-body text-white">
+          <h5 class="card-title">"MM-DD-YYYY"</h5>
+          <p>Temp: </p>
+          <p>Rain: </p>
+          <p>Humidity: </p>
+        </div>
+      </div>
+    </div>
+  </div> -->
