--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
 </head>
 
 <body>
-  <header>
-    <h1>Weather Dashboard</h1>
-  </header>
+<header>
+  <h1>Weather Dashboard</h1>
+</header>
 
-  <div class="container-fluid">
-    <!-- Row 1 -->
-    <div class="row">
-      <div class="col-lg-3" id=searchHistory>
-        <h3>Search for a City:</h3>
-        <input name="City" id="cityInput"><span><button id="button">Search</button></span></input></div>
-      <div class="col-lg-9" >
-        <div class="container mb-3 mt-3" id=currentWeather> </div>
-        <div class="row" id=forecastInput>
-
-        </div>
-        
+<div class="container-fluid">
+  <!-- Row 1 -->
+  <div class="row">
+    <div class="col-lg-3" >
+      <h3>Search for a City:</h3>
+      <input name="City" id="cityInput"><span><button id="button">Search</button></span></input>
+      <div id=searchHistory></div>
+    </div>
+      
+    <div class="col-lg-9" >
+      <div class="container-fluid mb-3" id=currentWeather> </div>
+      <div class="row ml-3" id=forecastInput>
       </div>
     </div>
   </div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  <script src="./Assets/js/script.js"></script>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+<script src="./Assets/js/script.js"></script>
 </body>
 
 </html>
