updated CSS and README

--- a/index.html
+++ b/index.html
@@ -13,16 +13,15 @@
 <header>
   <h1>Weather Dashboard</h1>
 </header>
-
 <div class="container-fluid">
-  <!-- Row 1 -->
+  <!-- This is the column for the input and history section. -->
   <div class="row">
     <div class="col-lg-3" >
       <h3>Search for a City:</h3>
       <input name="City" id="cityInput"><span><button id="button">Search</button></span></input>
       <div id=searchHistory></div>
     </div>
-      
+    <!-- This creates the column for the weather information -->
     <div class="col-lg-9" >
       <div class="container-fluid mb-3" id=currentWeather> </div>
       <div class="row ml-3" id=forecastInput>
